Fix a bugs that horizontal scroll bar is displayed on the calculated input element, on the other browsers chrome. Modification of language resources.

--- a/css/freeboard.css
+++ b/css/freeboard.css
@@ -2922,7 +2922,8 @@ textarea.calculated-value-input {
 	height: 20px;
 	resize: none;
 	white-space: nowrap;
-	overflow: auto;
+	overflow-x: hidden;
+	overflow-y: auto;
 	Z-index: 3000;
 }
 
